--- a/Gui/src/BruteTab/BruteConfigDialog.ui
+++ b/Gui/src/BruteTab/BruteConfigDialog.ui
@@ -408,7 +408,7 @@ background-color: rgb(230, 230, 172);
                </size>
               </property>
               <property name="styleSheet">
-               <string notr="true">background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 white, stop: 0.3 rgb(170, 170, 127));</string>
+               <string notr="true">background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1.5, stop: 0 white, stop: 1 grey);</string>
               </property>
               <property name="text">
                <string>Clear</string>
@@ -430,7 +430,7 @@ background-color: rgb(230, 230, 172);
                </size>
               </property>
               <property name="styleSheet">
-               <string notr="true">background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 white, stop: 0.3 rgb(170, 170, 127));</string>
+               <string notr="true">background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1.5, stop: 0 white, stop: 1 grey);</string>
               </property>
               <property name="text">
                <string>Remove</string>
@@ -452,7 +452,7 @@ background-color: rgb(230, 230, 172);
                </size>
               </property>
               <property name="styleSheet">
-               <string notr="true">background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 white, stop: 0.3 rgb(170, 170, 127));</string>
+               <string notr="true">background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1.5, stop: 0 white, stop: 1 grey);</string>
               </property>
               <property name="text">
                <string>Load</string>
@@ -506,7 +506,7 @@ background-color: rgb(230, 230, 172);
              </size>
             </property>
             <property name="styleSheet">
-             <string notr="true">background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 white, stop: 0.3 rgb(170, 170, 127));</string>
+             <string notr="true">background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1.5, stop: 0 white, stop: 1 grey);</string>
             </property>
             <property name="text">
              <string>Add</string>
