--- a/Gui/src/BruteTab/BruteConfigDialog.ui
+++ b/Gui/src/BruteTab/BruteConfigDialog.ui
@@ -345,6 +345,9 @@
       </property>
       <item>
        <layout class="QVBoxLayout" name="verticalLayout_2">
+        <property name="spacing">
+         <number>2</number>
+        </property>
         <item>
          <widget class="QLabel" name="label_9">
           <property name="text">
@@ -393,6 +396,9 @@ background-color: rgb(230, 230, 172);
           </item>
           <item>
            <layout class="QVBoxLayout" name="verticalLayout_8">
+            <property name="spacing">
+             <number>2</number>
+            </property>
             <item>
              <widget class="QPushButton" name="pushButton_clear">
               <property name="sizePolicy">
